[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/objects/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/scenes/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://game/objects/gate_to_level1.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/objects/coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/scripts/level0.gd" type="Script" id=5]
[ext_resource path="res://game/scenes/buttons.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/scenes/coin_display.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/thoth/thoth_gamestate.gd" type="Script" id=8]

[node name="level0" type="Node2D"]
script = ExtResource( 5 )

[node name="layers" type="Node2D" parent="."]
scale = Vector2( 5, 5 )

[node name="background" type="TileMap" parent="layers"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( -131056, 5, 65537, -131055, 5, 65537, -131054, 5, 65537, -131053, 5, 65537, -1, 0, 196613, -65536, 0, 196609, -65535, 0, 196609, -65534, 0, 196609, -65533, 0, 196609, -65532, 0, 196609, -65531, 0, 196609, -65530, 0, 196609, -65529, 0, 196609, -65528, 0, 196609, -65527, 0, 196609, -65526, 0, 196609, -65525, 0, 196609, -65524, 0, 196609, -65523, 0, 196609, -65522, 5, 65536, -65521, 0, 196609, -65520, 5, 65536, -65517, 5, 65536, -65516, 5, 65536, -65515, 5, 65536, -65514, 0, 196609, -65513, 0, 196609, -65512, 0, 196614, 65535, 0, 131074, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 196615, 13, 0, 0, 14, 5, 65536, 15, 5, 65536, 16, 5, 65536, 17, 0, 196613, 18, 0, 196614, 19, 5, 65536, 20, 5, 65536, 21, 5, 65536, 22, 0, 0, 23, 0, 0, 24, 0, 131072, 131071, 0, 131074, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 65536, 65547, 0, 65537, 65548, 0, 65538, 65549, 0, 0, 65550, 5, 65536, 65551, 5, 65536, 65552, 5, 65536, 65553, 0, 0, 65554, 0, 1, 65555, 5, 65536, 65556, 5, 65536, 65557, 5, 65536, 65558, 0, 1, 65559, 0, 0, 65560, 0, 131072, 196607, 0, 131074, 131072, 0, 0, 131073, 0, 0, 131074, 0, 65536, 131075, 0, 65537, 131076, 0, 65538, 131077, 0, 0, 131078, 0, 196615, 131079, 0, 0, 131080, 0, 65536, 131081, 0, 65537, 131082, 0, 196611, 131083, 3, 0, 131084, 0, 131074, 131085, 0, 0, 131086, 0, 0, 131087, 0, 2, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 65536, 131092, 0, 65537, 131093, 0, 65538, 131094, 0, 0, 131095, 0, 0, 131096, 0, 131072, 262143, 0, 131074, 196608, 0, 0, 196609, 0, 0, 196610, 0, 131072, 196611, 3, 0, 196612, 0, 196612, 196613, 0, 65538, 196614, 0, 0, 196615, 0, 0, 196616, 0, 131072, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 0, 131074, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 131072, 196628, 3, 0, 196629, 0, 131074, 196630, 0, 0, 196631, 0, 196615, 196632, 0, 131072, 327679, 0, 131074, 262144, 0, 0, 262145, 0, 65536, 262146, 0, 196611, 262147, 3, 0, 262148, 3, 0, 262149, 0, 196612, 262150, 0, 65537, 262151, 0, 65538, 262152, 0, 196608, 262153, 0, 196609, 262154, 0, 196609, 262155, 0, 196609, 262156, 0, 196610, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 196608, 262164, 0, 196609, 262165, 0, 196610, 262166, 0, 0, 262167, 0, 2, 262168, 0, 131072, 393215, 0, 131074, 327680, 0, 0, 327681, 0, 131072, 327682, 3, 0, 327683, 0, 196613, 327684, 0, 196614, 327685, 3, 0, 327686, 3, 0, 327687, 0, 131074, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 196615, 327695, 0, 65536, 327696, 0, 65537, 327697, 0, 65538, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 131072, 458751, 0, 131074, 393216, 0, 0, 393217, 0, 196608, 393218, 0, 196609, 393219, 0, 196610, 393220, 0, 131072, 393221, 3, 0, 393222, 0, 196613, 393223, 0, 196610, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 65536, 393228, 0, 65537, 393229, 0, 65537, 393230, 0, 65537, 393231, 0, 196611, 393232, 3, 0, 393233, 0, 131074, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 131072, 524287, 0, 131074, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 1, 458756, 0, 196608, 458757, 0, 196609, 458758, 0, 196610, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 131072, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 0, 131074, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 2, 458775, 0, 0, 458776, 0, 131072, 589823, 0, 131074, 524288, 0, 0, 524289, 0, 1, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 196608, 524300, 0, 196609, 524301, 0, 196609, 524302, 0, 196609, 524303, 0, 196609, 524304, 0, 196609, 524305, 0, 196610, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 131072, 655359, 0, 131074, 589824, 0, 0, 589825, 0, 0, 589826, 0, 1, 589827, 0, 0, 589828, 0, 2, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 1, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 65536, 589843, 0, 65537, 589844, 0, 65538, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 131072, 720895, 0, 131074, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 1, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 2, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 196615, 655374, 0, 65536, 655375, 0, 65537, 655376, 0, 65537, 655377, 0, 65537, 655378, 0, 196611, 655379, 3, 0, 655380, 0, 131074, 655381, 0, 1, 655382, 0, 0, 655383, 0, 0, 655384, 0, 131072, 786431, 0, 131074, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 196615, 720905, 0, 0, 720906, 0, 196615, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 131072, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 0, 131074, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 131072, 851967, 0, 131074, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 1, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 196608, 786447, 0, 196609, 786448, 0, 196609, 786449, 0, 196609, 786450, 0, 196609, 786451, 0, 196609, 786452, 0, 196610, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 131072, 917503, 0, 131074, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 2, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 131072, 983039, 0, 196612, 917504, 0, 65537, 917505, 0, 65537, 917506, 0, 65537, 917507, 0, 65537, 917508, 0, 65537, 917509, 0, 65537, 917510, 0, 65537, 917511, 0, 65537, 917512, 0, 65537, 917513, 0, 65537, 917514, 0, 65537, 917515, 0, 65537, 917516, 0, 65537, 917517, 0, 65537, 917518, 0, 65537, 917519, 0, 65537, 917520, 0, 65537, 917521, 0, 65537, 917522, 0, 65537, 917523, 0, 65537, 917524, 0, 65537, 917525, 0, 65537, 917526, 0, 65537, 917527, 0, 65537, 917528, 0, 196611 )

[node name="foreground" type="TileMap" parent="layers"]
z_index = 100
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( -1, 2, 0, -65536, 2, 1, -65535, 2, 1, -65534, 2, 1, -65533, 2, 1, -65532, 2, 1, -65531, 2, 1, -65530, 2, 1, -65529, 2, 1, -65528, 2, 1, -65527, 2, 1, -65526, 2, 1, -65525, 2, 1, -65524, 2, 1, -65523, 2, 1, -65522, 5, 65537, -65521, 5, 65537, -65520, 5, 65537, -65517, 5, 65537, -65516, 5, 65537, -65515, 5, 65537, -65514, 2, 1, -65513, 2, 1, -65512, 2, 2, 65535, 2, 65538, 14, 5, 65537, 15, 5, 65537, 16, 5, 65537, 17, 4, 0, 19, 5, 65537, 20, 5, 65537, 21, 5, 65537, 24, 2, 65539, 131071, 2, 65536, 65550, 5, 65537, 65551, 5, 65537, 65552, 5, 65537, 65555, 5, 65537, 65556, 5, 65537, 65557, 5, 65537, 65560, 2, 65538, 196607, 2, 65536, 131096, 2, 65539, 262143, 2, 65538, 196632, 2, 65539, 327679, 2, 65538, 262168, 2, 65538, 393215, 2, 65539, 327704, 2, 65538, 458751, 2, 65539, 393240, 2, 65536, 524287, 2, 65539, 458776, 2, 65536, 589823, 2, 65539, 524312, 2, 65536, 655359, 2, 65539, 589848, 2, 65538, 720895, 2, 65536, 655384, 2, 65539, 786431, 2, 65539, 720920, 2, 65539, 851967, 2, 65539, 786456, 2, 65538, 917503, 2, 65539, 851992, 2, 65538, 983039, 2, 131072, 917504, 2, 1, 917505, 2, 1, 917506, 2, 1, 917507, 2, 1, 917508, 2, 1, 917509, 2, 1, 917510, 2, 1, 917511, 2, 1, 917512, 2, 1, 917513, 2, 1, 917514, 2, 1, 917515, 2, 1, 917516, 2, 1, 917517, 2, 1, 917518, 2, 1, 917519, 2, 1, 917520, 2, 1, 917521, 2, 1, 917522, 2, 1, 917523, 2, 1, 917524, 2, 1, 917525, 2, 1, 917526, 2, 1, 917527, 2, 1, 917528, 2, 131074 )

[node name="gate" parent="." instance=ExtResource( 3 )]
position = Vector2( 1440, -32 )

[node name="gate_from_level1" type="Node2D" parent="."]
position = Vector2( 1438, 95 )
scale = Vector2( 5, 5 )

[node name="objects" type="Node2D" parent="."]

[node name="coin" parent="objects" instance=ExtResource( 4 )]
position = Vector2( 1620, 575 )

[node name="coin2" parent="objects" instance=ExtResource( 4 )]
position = Vector2( 1230, 897 )

[node name="coin3" parent="objects" instance=ExtResource( 4 )]
position = Vector2( 694, 856 )

[node name="coin4" parent="objects" instance=ExtResource( 4 )]
position = Vector2( 427, 703 )

[node name="coin5" parent="objects" instance=ExtResource( 4 )]
position = Vector2( 957, 558 )

[node name="coin6" parent="objects" instance=ExtResource( 4 )]
position = Vector2( 626, 383 )

[node name="coin7" parent="objects" instance=ExtResource( 4 )]
position = Vector2( 1281, 362 )

[node name="player" parent="objects" instance=ExtResource( 1 )]
position = Vector2( 128, 256 )

[node name="buttons" parent="." instance=ExtResource( 6 )]

[node name="coin_display" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 64 )

[node name="Savestate" type="Node" parent="."]
script = ExtResource( 8 )
save_filename = "savegame.sav"

[connection signal="load_pressed" from="buttons" to="." method="_on_buttons_load_pressed"]
[connection signal="save_pressed" from="buttons" to="." method="_on_buttons_save_pressed"]
